--- a/Again/Again.WasmClient/Pages/LoginPage.razor
+++ b/Again/Again.WasmClient/Pages/LoginPage.razor
@@ -65,7 +65,7 @@
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
         z-index: 1; /* Login penceresini üstte tutmak için */
         text-align: center; /* İçerikleri ortalama */
-        transform: translateX(150px); /* Pencereyi sağa kaydırma */
+        transform: translateX(100px); /* Pencereyi sağa kaydırma */
     }
 
     .logo-container {
@@ -73,6 +73,7 @@
         flex-direction: column;
         align-items: center;
         margin-bottom: 20px;
+        margin-left: 15px; /* Logo sola kaydırıldı */
     }
 
     .login-logo {
