--- a/Again/Again.WasmClient/Pages/RegisterPage.razor
+++ b/Again/Again.WasmClient/Pages/RegisterPage.razor
@@ -17,6 +17,10 @@
                 <input type="password" id="password" class="form-control" placeholder="Şifrenizi Girin">
             </div>
             <div class="form-group">
+                <label for="confirm-password">Şifre Yeniden</label>
+                <input type="password" id="confirm-password" class="form-control" placeholder="Şifrenizi Yeniden Girin">
+            </div>
+            <div class="form-group">
                 <button type="submit" class="register-button">Kayıt Ol</button>
             </div>
         </form>
@@ -30,15 +34,17 @@
         width: 100%;
         height: 100%;
         font-family: Arial, sans-serif;
-        background: url('https://my.spline.design/sphereanddance-35e243bc189a606a1b8fc7ffa926ef24/') no-repeat center center fixed;
+        overflow: hidden;
+        background: url('https://my.spline.design/windturbine-bb630568d8ce81b8f02e6ad2a4d7856a/') no-repeat center center fixed;
         background-size: cover;
     }
 
     .registration-container {
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         height: 100vh;
+        padding-right: 50px;
     }
 
     .registration-window {
@@ -64,6 +70,12 @@
         margin-top: 5px;
         border: 1px solid #ccc;
         border-radius: 5px;
+        transition: box-shadow 0.3s ease-in-out;
+    }
+
+    .form-control:focus {
+        outline: none;
+        box-shadow: 0 0 5px rgba(0, 123, 255, 0.8);
     }
 
     .register-button {
