--- a/Again/Again.WasmClient/Pages/RegisterPage.razor
+++ b/Again/Again.WasmClient/Pages/RegisterPage.razor
@@ -27,6 +27,8 @@
     </div>
 </div>
 
+<iframe src="https://my.spline.design/windturbine-bb630568d8ce81b8f02e6ad2a4d7856a/" frameborder="0" class="background-animation"></iframe>
+
 <style>
     body, html {
         margin: 0;
@@ -35,8 +37,6 @@
         height: 100%;
         font-family: Arial, sans-serif;
         overflow: hidden;
-        background: url('https://my.spline.design/windturbine-bb630568d8ce81b8f02e6ad2a4d7856a/') no-repeat center center fixed;
-        background-size: cover;
     }
 
     .registration-container {
@@ -45,6 +45,8 @@
         align-items: center;
         height: 100vh;
         padding-right: 50px;
+        position: relative;
+        z-index: 1;
     }
 
     .registration-window {
@@ -91,5 +93,15 @@
 
     .register-button:hover {
         background-color: #45a049;
+    }
+
+    .background-animation {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+        z-index: 0;
     }
 </style>
