login logo added

--- a/Again/Again.WasmClient/Pages/LoginPage.razor
+++ b/Again/Again.WasmClient/Pages/LoginPage.razor
@@ -8,7 +8,7 @@
     <div class="login-form">
         <!-- Logo ve yazıyı içeren bir container -->
         <div class="logo-container">
-            <img src="again-logo.png" alt="Logo" class="login-logo" />
+            <img src="againlogos.png" alt="Logo" class="login-logo" />
             <span class="logo-text">AGAIN</span>
         </div>
         <input type="text" placeholder="Kullanıcı Adı" @bind="username" />
